# rag-podcast-fullstack

./: .env.template  README.md  deploy-local.sh  deploy.sh  docker-compose.local.yml  docker-compose.template.yml  docker-compose.test.yml  docker-compose.yml  down-local.sh  nginx.conf  nginx.deployment.conf  up-local.sh
.github/workflows/: aws.yml  build-and-push-backend.yml  build-and-push-frontend.yml  build-and-push.yml  build.yml  code-quality.yml  deploy.yml  images.yml  integration-tests-backend.yml  linting-backend.yml  main.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  alembic.template.ini  pyproject.toml
backend/app/: backend_pre_start.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: generator.py
backend/app/core/: config.py  constants.py  db.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 22c9b0c5e4c5_update_answer_text_field.py  79f0476f8250_prompt_model_added.py  8ef5082f2e19_initial_migration_create_podcast_.py  93db8815a923_text_field_varchar_increases.py  a7510651bc92_answer_text_field_increased.py
backend/app/models/: answer.py  podcast_segment_summary.py  prompt.py  question.py  question_request.py  server_sent_event.py  sse_event.py
backend/app/services/: cache.py  llm_service.py  openai.py
backend/app/services/pipeline/: hf_query_embedder.py  jina_query_embedder.py  pipeline_builder.py  pipeline_service.py  postgres_retriever.py  query_embedder.py
backend/app/tests/: pytest.ini
backend/app/tests/integration_tests/: conftest.py  test_generator.py  test_health_check.py
backend/app/utils/: response_streaming.py
backend/scripts/: prestart.sh
frontend/: Dockerfile  angular.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.html
frontend/src/app/: app.config.ts
frontend/src/app/directives/: click-outside.directive.ts
frontend/src/app/home/: home.component.html  home.component.sass  home.component.ts
frontend/src/app/markdown/: marked-options.factory.ts
frontend/src/app/models/: example-question.ts  question-request.ts  server-sent-event-message.ts  sse-event.ts
frontend/src/app/services/: config.service.ts  stream.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
